fix(expandable table): switched visibility collapse to display:none.Collapse has bad browser support

--- a/tegel/src/components/data-table/table-body-row-expandable/table-body-row-expandable.scss
+++ b/tegel/src/components/data-table/table-body-row-expandable/table-body-row-expandable.scss
@@ -45,13 +45,12 @@
   }
 
   .sdds-table__row-expand {
-    visibility: collapse;
+    display: none;
     transition: background-color 200ms ease;
 
     .sdds-table__cell-expand {
       padding: 16px 16px 16px 66px;
       color: var(--sdds-data-table-color);
-
     }
   }
 }
@@ -69,7 +68,7 @@
 
   .sdds-table__row-expand {
     background-color: var(--sdds-data-table-body-row-background-selected);
-    visibility: visible;
+    display: table-row;
   }
 }
 
